# Smart-Mall

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
SmartMall/: asgi.py  settings.py  urls.py  wsgi.py
core/: decorators.py  widgets.py
home/: urls.py  views.py
malls/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
malls/migrations/: 0001_initial.py  0002_auto_20220505_1258.py  0002_initial.py  0003_auto_20220506_2119.py
nginx/: nginx.conf
rating/: admin.py  models.py
rating/migrations/: 0001_initial.py  0002_initial.py
templates/: base.html
templates/home/: about.html  homepage.html
templates/includes/: contact_form.html  default_form.html  footer.html  header.html  login_form.html  mall_card.html  rent_card.html  signup_form.html
templates/malls/: area_create.html  area_detail.html  area_edit.html  dashboard.html  mall_create.html  mall_detail.html  mall_edit.html  rent_create.html  rent_detail.html  rent_edit.html  search.html
templates/users/: deposit.html  lessor.html  login.html  password_reset_done.html  profile.html  tenant.html
templates/widgets/: image.html
users/: admin.py  backends.py  decorators.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20220509_1122.py
