[tool.poetry]
name = "smartmall"
version = "0.1.0"
description = ""
authors = ["Firsov Kirill <kirya.firsov.04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.13"
gunicorn = "^20.1.0"
Pillow = "9.1.0"
sorl-thumbnail = "12.8.0"
django-phonenumber-field = "6.1.0"
django-phonenumbers = "1.0.1"
phonenumbers = "8.12.47"
django-cleanup = "6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
